// Code generated by sheeter. DO NOT EDIT.
// Sheeter: https://github.com/yinweli/Sheeter

syntax = "proto3";
package sheeterEnum;

option go_package = ".;sheeterEnum";

enum File1Enum {
  Name0 = 0; // 第0個列舉
  Name1 = 1; // 第1個列舉
  Name2 = 2; // 第2個列舉
}
